KAFKA-20995: POC phase 1 - explicit activation and input-driven wait recovery
Generated-by: OpenAI Codex